{
  "version": 4,
  "terraform_version": "1.5.5",
  "serial": 627,
  "lineage": "e8c80e40-130a-1d66-6c09-717ca9bf1ff8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_airbyte",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00ce1e6846d9705be",
            "association_id": "eipassoc-0a8c2ce13eb0a78e6",
            "domain": "vpc",
            "id": "eipalloc-00ce1e6846d9705be",
            "instance": "i-06a1752c0c2979728",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0ed6a5e6318f5441f",
            "private_dns": "ip-10-0-1-251.ec2.internal",
            "private_ip": "10.0.1.251",
            "public_dns": "ec2-3-233-199-38.compute-1.amazonaws.com",
            "public_ip": "3.233.199.38",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.ec2_airbyte.aws_instance.ec2",
            "module.ec2_airbyte.aws_key_pair.auth_ssh",
            "module.ec2_airbyte.data.aws_ami.server_ami",
            "module.ec2_airbyte.tls_private_key.key",
            "module.networking.aws_security_group.airbyte",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_alb",
      "name": "airflow",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:770802840260:loadbalancer/app/alb/f18973adae672d9a",
            "arn_suffix": "app/alb/f18973adae672d9a",
            "desync_mitigation_mode": "defensive",
            "dns_name": "alb-1131720132.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:770802840260:loadbalancer/app/alb/f18973adae672d9a",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0b3f86287d3a621c0"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02ad1c5ac9ae794ad"
              },
              {
                "subnet_id": "subnet-078c71c4754f23983"
              }
            ],
            "subnets": [
              "subnet-02ad1c5ac9ae794ad",
              "subnet-078c71c4754f23983"
            ],
            "vpc_id": "vpc-0f044010ed06ac290",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.networking.aws_security_group.alb",
            "module.networking.aws_subnet.airflow_public_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "airflow_flower",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:770802840260:listener/app/alb/f18973adae672d9a/4cec80f5cc2c13d4",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:770802840260:targetgroup/flower/40a20f5d1145152a",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:770802840260:listener/app/alb/f18973adae672d9a/4cec80f5cc2c13d4",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:770802840260:loadbalancer/app/alb/f18973adae672d9a",
            "port": 5555,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_alb.airflow",
            "module.alb.aws_alb_target_group.airflow_flower",
            "module.networking.aws_security_group.alb",
            "module.networking.aws_subnet.airflow_public_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "airflow_web_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:770802840260:listener/app/alb/f18973adae672d9a/8545bd86e5d485ff",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:770802840260:targetgroup/web-server/535141bce30b46dc",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:770802840260:listener/app/alb/f18973adae672d9a/8545bd86e5d485ff",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:770802840260:loadbalancer/app/alb/f18973adae672d9a",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_alb.airflow",
            "module.alb.aws_alb_target_group.airflow_web_server",
            "module.networking.aws_security_group.alb",
            "module.networking.aws_subnet.airflow_public_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "airflow_flower",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:770802840260:targetgroup/flower/40a20f5d1145152a",
            "arn_suffix": "targetgroup/flower/40a20f5d1145152a",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 60,
                "matcher": "200",
                "path": "/health",
                "port": "5555",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:770802840260:targetgroup/flower/40a20f5d1145152a",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "flower",
            "port": 5555,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0f044010ed06ac290"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "airflow_web_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:770802840260:targetgroup/web-server/535141bce30b46dc",
            "arn_suffix": "targetgroup/web-server/535141bce30b46dc",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 60,
                "matcher": "200",
                "path": "/health",
                "port": "8080",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:770802840260:targetgroup/web-server/535141bce30b46dc",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "web-server",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0f044010ed06ac290"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_airbyte",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e783882a19958fff",
            "arn": "arn:aws:ec2:us-east-1:770802840260:instance/i-06a1752c0c2979728",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06a1752c0c2979728",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "ec2_key_pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ed6a5e6318f5441f",
            "private_dns": "ip-10-0-1-251.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.251",
            "public_dns": "ec2-3-233-199-38.compute-1.amazonaws.com",
            "public_ip": "3.233.199.38",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a6fb7ba22704ac5c",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0463e6e7705c3220c",
            "tags": {
              "Name": "ec2-datalake-core"
            },
            "tags_all": {
              "Name": "ec2-datalake-core"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e392a1047a29cebe"
            ]
          },
          "dependencies": [
            "module.ec2_airbyte.aws_key_pair.auth_ssh",
            "module.ec2_airbyte.data.aws_ami.server_ami",
            "module.ec2_airbyte.tls_private_key.key",
            "module.networking.aws_security_group.airbyte",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:770802840260:internet-gateway/igw-0ee02f891a050358f",
            "id": "igw-0ee02f891a050358f",
            "owner_id": "770802840260",
            "tags": {
              "Name": "networking-datalake-core"
            },
            "tags_all": {
              "Name": "networking-datalake-core"
            },
            "vpc_id": "vpc-0f044010ed06ac290"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route",
      "name": "default_route_out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0ee02f891a050358f",
            "id": "r-rtb-08daefd808da5aa7d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08daefd808da5aa7d",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_internet_gateway.ig",
            "module.networking.aws_route_table.rt",
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:770802840260:route-table/rtb-08daefd808da5aa7d",
            "id": "rtb-08daefd808da5aa7d",
            "owner_id": "770802840260",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ee02f891a050358f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "networking-datalake-core"
            },
            "tags_all": {
              "Name": "networking-datalake-core"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f044010ed06ac290"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta_airbyte",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f98ac712651e1dd0",
            "route_table_id": "rtb-08daefd808da5aa7d",
            "subnet_id": "subnet-0463e6e7705c3220c"
          },
          "dependencies": [
            "module.networking.aws_route_table.rt",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta_airflow",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05c91b10652c4f308",
            "route_table_id": "rtb-08daefd808da5aa7d",
            "subnet_id": "subnet-02ad1c5ac9ae794ad"
          },
          "dependencies": [
            "module.networking.aws_route_table.rt",
            "module.networking.aws_subnet.airflow_public_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0794bec732690b5db",
            "route_table_id": "rtb-08daefd808da5aa7d",
            "subnet_id": "subnet-078c71c4754f23983"
          },
          "dependencies": [
            "module.networking.aws_route_table.rt",
            "module.networking.aws_subnet.airflow_public_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "airbyte",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:770802840260:security-group/sg-0e392a1047a29cebe",
            "description": "main security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e392a1047a29cebe",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "security_group_ec2",
            "name_prefix": "",
            "owner_id": "770802840260",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "networking-datalake-core"
            },
            "tags_all": {
              "Name": "networking-datalake-core"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f044010ed06ac290"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "airflow_flower",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:770802840260:security-group/sg-0acf3ef3f6756b850",
            "description": "Allow all inbound traffic for Flower",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0acf3ef3f6756b850",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "security_group_airflow_flower",
            "name_prefix": "",
            "owner_id": "770802840260",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "networking-datalake-core"
            },
            "tags_all": {
              "Name": "networking-datalake-core"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f044010ed06ac290"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "airflow_scheduler",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:770802840260:security-group/sg-0f5356d16d5c1d27a",
            "description": "Airflow scheduler security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f5356d16d5c1d27a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "security_group_airflow_scheduler",
            "name_prefix": "",
            "owner_id": "770802840260",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "networking-datalake-core"
            },
            "tags_all": {
              "Name": "networking-datalake-core"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f044010ed06ac290"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "airflow_worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:770802840260:security-group/sg-0f5ea1db7be3c5a8c",
            "description": "Airflow Celery Workers security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f5ea1db7be3c5a8c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "security_group_airflow_worker",
            "name_prefix": "",
            "owner_id": "770802840260",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "networking-datalake-core"
            },
            "tags_all": {
              "Name": "networking-datalake-core"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f044010ed06ac290"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:770802840260:security-group/sg-0b3f86287d3a621c0",
            "description": "Allow all inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b3f86287d3a621c0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "security_group_airflow_alb",
            "name_prefix": "",
            "owner_id": "770802840260",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "networking-datalake-core"
            },
            "tags_all": {
              "Name": "networking-datalake-core"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f044010ed06ac290"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "postgres",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:770802840260:security-group/sg-0612d6a0d3237e0b9",
            "description": "Allow all inbound for Postgres",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0612d6a0d3237e0b9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "security_group_postgres",
            "name_prefix": "",
            "owner_id": "770802840260",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "networking-datalake-core"
            },
            "tags_all": {
              "Name": "networking-datalake-core"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f044010ed06ac290"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "redis",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:770802840260:security-group/sg-0f68b1a48de9004d9",
            "description": "Allow all inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f68b1a48de9004d9",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "security_group_redis",
            "name_prefix": "",
            "owner_id": "770802840260",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "networking-datalake-core"
            },
            "tags_all": {
              "Name": "networking-datalake-core"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f044010ed06ac290"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:770802840260:security-group/sg-0805041af65c3551a",
            "description": "Allow all inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0805041af65c3551a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "security_group_airflow_web_server",
            "name_prefix": "",
            "owner_id": "770802840260",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "networking-datalake-core"
            },
            "tags_all": {
              "Name": "networking-datalake-core"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f044010ed06ac290"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "airflow_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:770802840260:subnet/subnet-02ad1c5ac9ae794ad",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02ad1c5ac9ae794ad",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "770802840260",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0f044010ed06ac290"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:770802840260:subnet/subnet-078c71c4754f23983",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-078c71c4754f23983",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "770802840260",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0f044010ed06ac290"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:770802840260:subnet/subnet-0463e6e7705c3220c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0463e6e7705c3220c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "770802840260",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "networking-datalake-core"
            },
            "tags_all": {
              "Name": "networking-datalake-core"
            },
            "vpc_id": "vpc-0f044010ed06ac290"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:770802840260:vpc/vpc-0f044010ed06ac290",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04b5246eb73d578c6",
            "default_route_table_id": "rtb-07973c3cc9d6a6288",
            "default_security_group_id": "sg-0ecec6d6cfe782400",
            "dhcp_options_id": "dopt-0e92059e1212513ca",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f044010ed06ac290",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07973c3cc9d6a6288",
            "owner_id": "770802840260",
            "tags": {
              "Name": "networking-datalake-core"
            },
            "tags_all": {
              "Name": "networking-datalake-core"
            }
          }
        }
      ]
    }
  ]
}